@@ -72,6 +72,12 @@ namespace Castle.Core.Logging
 		void Debug(String message);
 
 		/// <summary>
+		/// Logs a debug message with lazily constructed message. The message will be constructed only if the <see cref="IsDebugEnabled"/> is true.
+		/// </summary>
+		/// <param name="messageFactory"></param>
+		void Debug(Func<string> messageFactory);
+
+		/// <summary>
 		///   Logs a debug message.
 		/// </summary>
 		/// <param name = "exception">The exception to log</param>
@@ -115,6 +121,12 @@ namespace Castle.Core.Logging
 		/// </summary>
 		/// <param name = "message">The message to log</param>
 		void Error(String message);
+
+		/// <summary>
+		/// Logs an error message with lazily constructed message. The message will be constructed only if the <see cref="IsErrorEnabled"/> is true.
+		/// </summary>
+		/// <param name="messageFactory"></param>
+		void Error(Func<string> messageFactory);
 
 		/// <summary>
 		///   Logs an error message.
@@ -162,6 +174,12 @@ namespace Castle.Core.Logging
 		void Fatal(String message);
 
 		/// <summary>
+		/// Logs a fatal message with lazily constructed message. The message will be constructed only if the <see cref="IsFatalEnabled"/> is true.
+		/// </summary>
+		/// <param name="messageFactory"></param>
+		void Fatal(Func<string> messageFactory);
+
+		/// <summary>
 		///   Logs a fatal message.
 		/// </summary>
 		/// <param name = "exception">The exception to log</param>
@@ -207,6 +225,12 @@ namespace Castle.Core.Logging
 		void Info(String message);
 
 		/// <summary>
+		/// Logs a info message with lazily constructed message. The message will be constructed only if the <see cref="IsInfoEnabled"/> is true.
+		/// </summary>
+		/// <param name="messageFactory"></param>
+		void Info(Func<string> messageFactory);
+
+		/// <summary>
 		///   Logs an info message.
 		/// </summary>
 		/// <param name = "exception">The exception to log</param>
@@ -250,6 +274,12 @@ namespace Castle.Core.Logging
 		/// </summary>
 		/// <param name = "message">The message to log</param>
 		void Warn(String message);
+
+		/// <summary>
+		/// Logs a warn message with lazily constructed message. The message will be constructed only if the <see cref="IsWarnEnabled"/> is true.
+		/// </summary>
+		/// <param name="messageFactory"></param>
+		void Warn(Func<string> messageFactory);
 
 		/// <summary>
 		///   Logs a warn message.
