@@ -1,4 +1,5 @@
 ==================
+- implemented CORE-33 - Add lazy logging
 - removed obsolete members from ILogger and its implementations
 
 2.5.2 (2010-11-15)
